# HX-core

libraries/chain/: db_block.cpp
libraries/chain/protocol/: block.cpp
libraries/crosschain/: CMakeLists.txt  crosschain_interface_btc.cpp
libraries/crosschain_privatekey_management/: CMakeLists.txt  main.cpp  private_key.cpp  util.cpp
libraries/crosschain_privatekey_management/include/graphene/crosschain_privatekey_management/: private_key.hpp  util.hpp
libraries/egenesis/: CMakeLists.txt
libraries/fc/: CMakeLists.txt
libraries/fc/include/fc/crypto/: elliptic.hpp
libraries/fc/src/crypto/: elliptic_impl_priv.cpp  elliptic_secp256k1.cpp
libraries/privatekey_management/: CMakeLists.txt  main.cpp  private_key.cpp
libraries/privatekey_management/include/graphene/privatekey_management/: private_key.hpp
libraries/privatekey_management/third_lib/: CMakeLists.txt  threadsafestatics.lib
libraries/privatekey_management/third_lib/libbitcoin/src/math/: elliptic_curve.cpp  secp256k1_initializer.cpp
libraries/privatekey_management/third_lib/libbitcoin/src/wallet/: dictionary.cpp
libraries/privatekey_management/third_lib/secp256k1/include/: secp256k1.h
libraries/privatekey_management/third_lib/secp256k1/src/: secp256k1.c
libraries/privatekey_management/third_lib/secp256k1/src/modules/recovery/: main_impl.h
libraries/wallet/: wallet.cpp
programs/cli_wallet/: CMakeLists.txt
programs/witness_node/: CMakeLists.txt
tests/: CMakeLists.txt
tests/tests/: operation_tests.cpp
